# gravy

./: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst  v1.2.rst
make/: toml_sorted_cfg.txt
src/gravy/: __init__.py
src/gravy/core/: __init__.py  cfg.toml
src/gravy/tests/: __init__.py  test_data.py  test_gravy.py  test_greet.py  testdata.toml
