[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gravy"
version = "0.0.0"
description = "gravy"
readme = "README.rst"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"
