[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.1.7",
    "preparse>=0.0.3",
]
description = "This project calculates the GRAVY score of a amino acid sequence."
keywords = []
name = "gravy"
readme = "README.rst"
requires-python = ">=3.8"
version = "1.0.12+local"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/gravy/#files"
Index = "https://pypi.org/project/gravy/"
Source = "https://github.com/johannes-programming/gravy/"
Website = "https://gravy.johannes-programming.online/"
