[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.3,<9",
    "preparse>=1.1,<2",
]
description = "This project calculates the GRAVY score of a amino acid sequence."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "gravy"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.1.2"

[project.urls]
Download = "https://pypi.org/project/gravy/#files"
Index = "https://pypi.org/project/gravy/"
Source = "https://github.com/johannes-programming/gravy/"
Website = "https://gravy.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = false
